# gen-web-blog

./: .gitignore  Cargo.toml  LICENSE  README.md  app.toml  deny.toml  deploy-macos.sh
.github/workflows/: publish-macos.yml
contents/: 2025-02-24-how-to-use-genwebblog.md  2025-02-27-markdown-content-management.md  2025-05-02-seo-writing-guide-2025.md  2025-05-03-is-seo-still-important-ai-era.md  2025-07-01-aeo-geo-new-era-of-search.md  2025-07-02-sge-explained.md  2025-07-03-eeat-guide.md  2025-07-04-redirect-aeo-geo.md  about.yml  articles.yml  contact.yml  faq.yml  index.yml  policy.yml  profile.yml  terms.yml
contents/docs/: 2025-01-04-troubleshooting.md  2025-10-12-build-deploy.md  2025-10-12-cli-reference.md  2025-10-12-getting-started.md  2025-10-12-i18n.md  2025-10-12-templates.md  2025-10-12-writing-content.md  index.yml
contents/en/: about.yml  articles.yml  contact.yml  faq.yml  index.yml  policy.yml  profile.yml  terms.yml
contents/seo/: 2025-04-26-what-is-seo-beginners-guide.md  2025-04-27-on-page-seo-beginner-guide.md  2025-04-28-off-page-seo-beginner-guide.md  2025-04-29-technical-seo-beginner-guide.md  2025-04-30-what-is-keyword-seo-guide.md  2025-05-01-seo-vs-sem-business-marketing.md  2025-05-02-lsi-keyword-seo-ranking.md  2025-05-03-check-google-ranking-free-tools.md  index.yml
contents/web-optimization/: 2025-03-08-properly-size-images-avif-webp.md  index.yml
public/: robots.txt  service-worker.js  site.webmanifest
public/favicon/: favicon-640.avif
public/javascripts/: accordion.js  gtag.js  (+4 more)
source/: tailwind.config.toml
src/: app.rs  blog.rs  deploy.rs  lib.rs  main.rs  posts.rs
(+162 files in other folders)
