[package]
name = "genwebblog"
version = "1.0.0"
authors = ["Boy Chawin <support@genwebblog.com>"]
edition = "2021"
description = "Gen Web Blog is a static site generator for articles."
repository = "https://github.com/boychawin/gen-web-blog"
license = "MIT"

[dependencies]
toml = "0.8.22"
encre-css = "0.15.0"
encre-css-typography = "0.1.7"
glob = "0.3"
eyre = "0.6.12"
thiserror = "1.0"
env_logger = "0.10"
handlebars = { version = "6.3", features = ["dir_source"] }
lazy_static = "1.5"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.9"
serde_json = "1.0"
comrak = { version = "0.39", features = ["bon"] }
rayon = "1.10"
regex = "1.11"
grass = "0.13"
chrono = "0.4"
warpy = "0.3"
tokio = "1.45"
fs_extra = "1.2"
reqwest = { version = "0.12.15", features = ["json","blocking"] }
sha2 = "0.10.9"
hex = "0.4"
base64 = "0.22.1"
git2 = "0.20.2"
minifier = "0.3.5"
unicode_categories = "0.1"
image = "0.25.6"
qr2term = "0.3.3"
log = "0.4.27"
warp = "0.3"
clap = "4.5.38"
aes = "0.8"
cbc = "0.1"
block-padding = "0.3"
rand = "0.9.1"
directories = "6.0.0"
once_cell = "1.21.3"
walkdir = "2.5.0"
minify-html = "0.16.4"
html-escape = "0.2"


[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.1"

[features]
shortcodes = []
bench = []


# Binary targets for future CLI commands
# Uncomment and implement as needed:
#
# [[bin]]
# name = "genwebblog-server"
# path = "src/bin/server.rs"
#
# [[bin]]
# name = "genwebblog-deploy"
# path = "src/bin/deploy.rs"
#
# [[bin]]
# name = "genwebblog-seo"
# path = "src/bin/seo.rs"
